[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "gctl"
version = "1.2"
authors = [
  { name="Han Ruihua", email="hanrh@connect.hku.hk" },
]
description = "Generate curve tool"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


dependencies = ['matplotlib',
                'numpy',
                'scipy',]

[project.urls]
Homepage = "https://github.com/hanruihua/GenerateCurveTool"